--- a/posts/primeira-postagem/index.qmd
+++ b/posts/primeira-postagem/index.qmd
@@ -22,4 +22,50 @@ imprimir_nome(x)
 
 ```
 
+# Equações
 
+$$ \LaTeX $$
+
+$$ e = mc^2$$
+
+$\frac{\alpha}{\beta}$ 
+
+{{< shortcodes >}}
+
+{{< meta subtitle >}}
+
+{{< meta categories >}}
+
+:::{.callout-tip collapse="true"}
+
+default callout é a melhor forma de escrever callouts que não ficam ocupando muito espaço
+
+:::
+
+
+:::{.panel-tabset}
+
+## R
+
+```{r}
+#| code-fold: false
+x <- 19
+
+```
+
+
+## Python
+
+```{python}
+#| code-fold: false
+x = 20
+```
+
+## Julia
+
+```{julia}
+#| code-fold: false
+\eta = 69
+```
+
+:::
