--- a/index.qmd
+++ b/index.qmd
@@ -1,16 +1,16 @@
 ---
-title: "blog"
-listing:
-  contents: posts
-  sort: "date desc"
-  type: "default" 
-  categories: true
-  sort-ui: false
-  filter-ui: true
-  feed: true
+title: "home"
 page-layout: full
-title-block-banner: true
+title-block-banner: false
 date-format: "DD - MM - YYYY"
+# listing:
+#   contents: posts
+#   sort: "date desc"
+#   type: "default" 
+#   categories: true
+#   sort-ui: false
+#   filter-ui: true
+#   feed: false
 ---
 
 
