--- a/index.qmd
+++ b/index.qmd
@@ -3,14 +3,10 @@ title: "home"
 page-layout: full
 title-block-banner: false
 date-format: "DD - MM - YYYY"
-# listing:
-#   contents: posts
-#   sort: "date desc"
-#   type: "default" 
-#   categories: true
-#   sort-ui: false
-#   filter-ui: true
-#   feed: false
+
 ---
 
 
+## Lucas Chagas Lima do Carmo
+
+Meu nome é esse, eu sou assim
