--- a/apresentacoes/Aula5/index.qmd
+++ b/apresentacoes/Aula5/index.qmd
@@ -3,11 +3,15 @@ title: "Aula 5 - Gráficos com ggplot2"
 subtitle: ""
 author: "Lucas C. L. do Carmo"
 date: "2020-10-22"
-format: revealjs
 image: ggplot-theme-elements.jpeg
+format: 
+  revealjs:
+    theme: default
+    footer: "[lucas carmo](/) / [apresentações](/apresentacoes.html)"
 ---
 
-https://www.youtube.com/watch?v=vMx_ARUkRGo&list=PLwhLOy1PoHDHKfod_nZt7rExHBSlEu_pm&index=5
+## {background-iframe="https://www.youtube.com/embed/vMx_ARUkRGo" background-interactive=True}
+
 
 ```{r, include=FALSE}
 library(tidyverse)
@@ -216,7 +220,7 @@ Na primeira aula de `ggplot2` eu expliquei que as estéticas do gráfico, (eixo 
 ```{r echo=TRUE}
 ggplot(mpg) +
   aes(displ, hwy,
-      col = cyl) + #<<
+      col = cyl) + 
   geom_point() 
 ```
 :::
@@ -225,7 +229,7 @@ ggplot(mpg) +
 ```{r echo=TRUE}
 ggplot(mpg) +
   aes(displ, hwy,
-      col = "blue") + #<<
+      col = "blue") + 
   geom_point()
 ```
 :::
@@ -239,7 +243,7 @@ ggplot(mpg) +
 ```{r echo=TRUE}
 ggplot(mpg) +
   aes(displ, hwy,
-      col = "blue") + #<<
+      col = "blue") + 
   geom_point() 
 ```
 :::
@@ -248,7 +252,7 @@ ggplot(mpg) +
 ```{r echo=TRUE}
 ggplot(mpg) +
   aes(displ, hwy) + 
-  geom_point(col = "blue") #<<
+  geom_point(col = "blue") 
 ```
 :::
 
@@ -266,10 +270,10 @@ ggplot(mpg) +
       col = cyl,
       shape = drv) + 
   geom_point(size = 3) +
-  scale_color_gradient( #<<
+  scale_color_gradient( 
     low = "grey25", 
     high = "firebrick") +
-  scale_shape_manual( #<<
+  scale_shape_manual( 
     values = c(2,4,1))
 ```
 
@@ -282,10 +286,10 @@ ggplot(mpg) +
       col = cyl,
       shape = drv) + 
   geom_point(size = 3) +
-  scale_color_gradient( #<<
+  scale_color_gradient( 
     low = "grey25", 
     high = "firebrick") +
-  scale_shape_manual( #<<
+  scale_shape_manual( 
     values = c(2,4,1)
   )
 ```
@@ -348,12 +352,12 @@ Algumas das transformações comuns são:
 ggplot(mpg) +
   aes(displ,hwy) +
   geom_point() +
-  scale_x_log10(#<<
+  scale_x_log10(
     limits = c(0.5,10),
     breaks = c(1,10),
     labels = c("um", "dez")
   ) + 
-  scale_y_sqrt( #<<
+  scale_y_sqrt( 
     breaks = c(max(mpg$hwy), 
                min(mpg$hwy), 
                mean(mpg$hwy)),
@@ -369,12 +373,12 @@ ggplot(mpg) +
 ggplot(mpg) +
   aes(displ,hwy) +
   geom_point() +
-  scale_x_log10(#<<
+  scale_x_log10(
     limits = c(0.5,10),
     breaks = c(1,10),
     labels = c("um", "dez")
   ) + 
-  scale_y_sqrt( #<<
+  scale_y_sqrt( 
     breaks = c(max(mpg$hwy), 
                min(mpg$hwy), 
                mean(mpg$hwy)),
